Resolves: tdf#100057 force libxslt to give up when we cancel a transformation

we're already using libxslt internals, so using XSLT_STATE_STOPPED isn't an
additional exposure

This probably isn't all that useful to the original reporter in terms of
importing useful data, but it does turn a hopeless situation into something
that can be cancelled.

Change-Id: I08e9a1dcd9ee78e1804faec500bbcca36a546988